tests/NormalTests/paczka1/fuzzy1/94108889.err
Error in line 8: ZwF S503 52,3
Error in line 13: 693 A63 35,5
Error in line 10: ZwF A63 97,8
Error in line 18: ZwF S503 15,2
Error in line 14: 5EvDr A866 235,5
Error in line 17: 693 A866 57,2
Error in line 27: A63 A866 -1,4
Error in line 26: A63 A866 32,2
Error in line 40: ngwlxXL Ap66 14,7
